--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongodb": "^4.9.1"
+    "mongodb": "^4.9.1",
+    "puppeteer": "^19.7.2"
   }
 }
