chore: done with the changes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev":"nodemon index"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
@@ -12,5 +13,8 @@
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
     "puppeteer": "^19.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
